--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memory Game</title>
-  <link rel="stylesheet" href="project2.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="game-page">
@@ -17,6 +17,6 @@
     </div>
     <div id="memory-game" class="memory-game"></div>
   </div>
-  <script src="project2.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
